fix: 修复富文本弹出层z-index小于弹窗的问题

--- a/ruoyi-ui/src/style/ruoyi.less
+++ b/ruoyi-ui/src/style/ruoyi.less
@@ -43,17 +43,18 @@
   margin-top: 5px;
   border: 1px solid #e5e6e7;
   background: #FFFFFF none;
-  border-radius:4px;
+  border-radius: 4px;
   width: 100%;
 }
 
 .overlay-options {
-  display: inline-block!important;
-  font-size: 18px!important;
+  display: inline-block !important;
+  font-size: 18px !important;
 }
 
 .content-scrollbar {
   overflow-y: scroll;
+
   &::-webkit-scrollbar {
     width: 12px;
     background: transparent;
@@ -69,4 +70,9 @@
 
 .gen-option > span {
   width: 100%;
+}
+
+// 富文本弹出层
+.tox-tinymce-aux {
+  z-index: 3000 !important;
 }
